# EVPOLY

./: .env.example  .env.full.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  config.json.example  ev  strategy-changelog.md
.cargo/: audit.toml
.github/workflows/: ci.yml
docs/: endgame_sweep_v1.md  evcurve_v1.md  evsnipe_v1.md  fill_forensics.md  manual_endpoint_guide.md  mm_rewards_v1.md  premarket_v1.md  sessionband_v1.md  strategy_combos.md
scripts/: backtest_d1_gap.py  bootstrap_oss.sh  doctor.sh  ev_auto_restart.sh  evpoly_healthcheck.py  evpoly_retention_cleanup.sh  evpoly_watch.sh  execution_trust_report.py  fill_forensics.sh  filled_latency_onchain.py  generate_plandaily.py  install_evpoly_retention_cron.sh  mm_balance_merge_guard.sh  mm_global_status.sh  mm_inventory_reconcile_worker.sh  mm_phase_baseline.py  mm_phase_verify.sh  parallel_smoke.sh  remote_onboard.py  rollout_gate.py  security_audit.sh  verify_env_coverage.sh  wallet_history_sync.py  wallet_sync_worker.sh
src/: adaptive_chase.rs  api.rs  arbiter.rs  binance_wss.rs  bot_admin.rs  coinbase_ws.rs  config.rs  detector.rs  endgame_sweep.rs  entry_idempotency.rs  evcurve.rs  event_log.rs  evsnipe.rs  execution_pricing.rs  feature_engine_v2.rs  hl_signals.rs  hyperliquid_wss.rs  kelly.rs  lib.rs  main.rs  market_discovery.rs  merge.rs  microflow.rs  models.rs  monitor.rs  plan3_tables.rs  plan4b_tables.rs  plandaily_tables.rs  polymarket_ws.rs  sessionband.rs  signal_state.rs  simulation.rs  size_policy.rs  strategy.rs  strategy_decider.rs  symbol_ownership.rs  tracking_db.rs  trader.rs  ui_contracts.rs
src/mm/: fair_mid.rs  inventory_engine.rs  metrics.rs  mod.rs  quote_manager.rs  reward_scanner.rs  risk_supervisor.rs  scoring_guard.rs  ws_router.rs
